{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 183,
  "lineage": "a7c3e2ba-9773-32bb-2210-2fd217196fe8",
  "resources": [
    {
      "module": "module.lab3-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0aca3ec6f9dbf8c9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aca3ec6f9dbf8c9f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0ffb79503057070db"
          },
          "dependencies": [
            "module.lab3-vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-046d7abff88960071",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-046d7abff88960071",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet4"
            },
            "tags_all": {
              "Name": "subnet4"
            },
            "vpc_id": "vpc-0ffb79503057070db"
          },
          "dependencies": [
            "module.lab3-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.lab3-vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0f762957900d04efb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f762957900d04efb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0ffb79503057070db"
          },
          "dependencies": [
            "module.lab3-vpc.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-09897087fef9aefa4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09897087fef9aefa4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet3"
            },
            "tags_all": {
              "Name": "subnet3"
            },
            "vpc_id": "vpc-0ffb79503057070db"
          },
          "dependencies": [
            "module.lab3-vpc.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.lab3-vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:vpc/vpc-0ffb79503057070db",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-09c322c35592fd3f0",
            "default_route_table_id": "rtb-05705fe56c9a36e6f",
            "default_security_group_id": "sg-00634ec86b10c7c4a",
            "dhcp_options_id": "dopt-0c9045477746072cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ffb79503057070db",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05705fe56c9a36e6f",
            "owner_id": "724690408369",
            "tags": {
              "Name": " lab3"
            },
            "tags_all": {
              "Name": " lab3"
            }
          }
        }
      ]
    },
    {
      "module": "module.lab3_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "private-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_ec2_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-049e2baae95320d91",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-049e2baae95320d91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0095b5037177e11cf",
            "private_dns": "ip-10-0-1-110.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.110",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc6d3c355264d3fe",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db7210fc766d4ed3",
            "tags": {
              "Name": "private_ec2_1"
            },
            "tags_all": {
              "Name": "private_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d8aad0992512d9f"
            ]
          },
          "dependencies": [
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.routing-and-networking.aws_subnet.subnets_private"
          ]
        },
        {
          "index_key": "private_ec2_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-0f589cf034f23dc79",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f589cf034f23dc79",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0d60cd504000f1d0b",
            "private_dns": "ip-10-0-3-150.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.3.150",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-07ce56092042ef562",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fb82896c0495d4cb",
            "tags": {
              "Name": "private_ec2_2"
            },
            "tags_all": {
              "Name": "private_ec2_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d8aad0992512d9f"
            ]
          },
          "dependencies": [
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.routing-and-networking.aws_subnet.subnets_private"
          ]
        }
      ]
    },
    {
      "module": "module.lab3_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "public-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_ec2_1",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-0af88dc215bda6553",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0af88dc215bda6553",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "last-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03f3b71ba99c4974a",
            "private_dns": "ip-10-0-0-167.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.167",
            "public_ip": "54.196.215.10",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b8dabed9b53d6b32",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0db306e831d6201a3",
            "tags": {
              "Name": "public_ec2_1"
            },
            "tags_all": {
              "Name": "public_ec2_1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d8aad0992512d9f"
            ]
          },
          "dependencies": [
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "public_ec2_2",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-0558078dd0b393e94",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0558078dd0b393e94",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "last-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-035d038517dfda189",
            "private_dns": "ip-10-0-2-153.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.153",
            "public_ip": "107.22.150.115",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-037d2f405cd6520ab",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0815037447ff5610d",
            "tags": {
              "Name": "public_ec2_2"
            },
            "tags_all": {
              "Name": "public_ec2_2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-06d8aad0992512d9f"
            ]
          },
          "dependencies": [
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.lab3_ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:security-group/sg-06d8aad0992512d9f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06d8aad0992512d9f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "ec2 security group",
            "name_prefix": "",
            "owner_id": "724690408369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2 security group"
            },
            "tags_all": {
              "Name": "ec2 security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "privateAlb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/privateAlb/4ff82a3875d42244",
            "arn_suffix": "app/privateAlb/4ff82a3875d42244",
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-privateAlb-549954090.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/privateAlb/4ff82a3875d42244",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "privateAlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023152cd30ce612d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0db7210fc766d4ed3"
              },
              {
                "subnet_id": "subnet-0fb82896c0495d4cb"
              }
            ],
            "subnets": [
              "subnet-0db7210fc766d4ed3",
              "subnet-0fb82896c0495d4cb"
            ],
            "vpc_id": "vpc-0624438186a9dbe56",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "publicAlb",
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/publicAlb/10caac6906f149f5",
            "arn_suffix": "app/publicAlb/10caac6906f149f5",
            "desync_mitigation_mode": "defensive",
            "dns_name": "publicAlb-849023542.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/publicAlb/10caac6906f149f5",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "publicAlb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-023152cd30ce612d5"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0815037447ff5610d"
              },
              {
                "subnet_id": "subnet-0db306e831d6201a3"
              }
            ],
            "subnets": [
              "subnet-0815037447ff5610d",
              "subnet-0db306e831d6201a3"
            ],
            "vpc_id": "vpc-0624438186a9dbe56",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listner",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_alb",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:listener/app/privateAlb/4ff82a3875d42244/bfc2fda20976cd20",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/privateAlb-target-group/95f8be0adbc76b6c",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:listener/app/privateAlb/4ff82a3875d42244/bfc2fda20976cd20",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/privateAlb/4ff82a3875d42244",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_lb_target_group.target-group",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "public_alb",
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:listener/app/publicAlb/10caac6906f149f5/b68910bf3e192de4",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:listener/app/publicAlb/10caac6906f149f5/b68910bf3e192de4",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:loadbalancer/app/publicAlb/10caac6906f149f5",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_lb_target_group.target-group",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/privateAlb-target-group/95f8be0adbc76b6c",
            "arn_suffix": "targetgroup/privateAlb-target-group/95f8be0adbc76b6c",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/privateAlb-target-group/95f8be0adbc76b6c",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "privateAlb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "public",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d",
            "arn_suffix": "targetgroup/publicAlb-target-group/ab9520fb2088de1d",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "publicAlb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public_ec2_id_1",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d-20230201081108528200000005",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d",
            "target_id": "i-0af88dc215bda6553"
          },
          "dependencies": [
            "module.lab3_ec2.aws_instance.public-ec2",
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_lb_target_group.target-group",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "public_ec2_id_2",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d-20230201081108474100000004",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:724690408369:targetgroup/publicAlb-target-group/ab9520fb2088de1d",
            "target_id": "i-0558078dd0b393e94"
          },
          "dependencies": [
            "module.lab3_ec2.aws_instance.public-ec2",
            "module.lab3_ec2.aws_security_group.ec2_security",
            "module.loadbalancer.aws_lb.alb",
            "module.loadbalancer.aws_lb_target_group.target-group",
            "module.loadbalancer.aws_security_group.loadbalancer_security",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "loadbalancer_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:security-group/sg-023152cd30ce612d5",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-023152cd30ce612d5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "loadBalancer-security-group",
            "name_prefix": "",
            "owner_id": "724690408369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "loadBalancer-security-group"
            },
            "tags_all": {
              "Name": "loadBalancer-security-group"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0047262cd75daac15",
            "association_id": "eipassoc-0edc3047f01cf8365",
            "domain": "vpc",
            "id": "eipalloc-0047262cd75daac15",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0b6c067f37dc647c5",
            "private_dns": "ip-10-0-0-77.ec2.internal",
            "private_ip": "10.0.0.77",
            "public_dns": "ec2-35-172-90-117.compute-1.amazonaws.com",
            "public_ip": "35.172.90.117",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:internet-gateway/igw-0902ed3ad14ac8ec3",
            "id": "igw-0902ed3ad14ac8ec3",
            "owner_id": "724690408369",
            "tags": {
              "Name": "igw_lab3"
            },
            "tags_all": {
              "Name": "igw_lab3"
            },
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0047262cd75daac15",
            "connectivity_type": "public",
            "id": "nat-0f1af369c4a2761e0",
            "network_interface_id": "eni-0b6c067f37dc647c5",
            "private_ip": "10.0.0.77",
            "public_ip": "35.172.90.117",
            "subnet_id": "subnet-0db306e831d6201a3",
            "tags": {
              "Name": "NatGateway"
            },
            "tags_all": {
              "Name": "NatGateway"
            }
          },
          "dependencies": [
            "module.routing-and-networking.aws_eip.elastic_ip",
            "module.routing-and-networking.aws_internet_gateway.igw_3",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private_route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-09077156c86956e611080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0f1af369c4a2761e0",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09077156c86956e61",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_internet_gateway.igw_3",
            "module.routing-and-networking.aws_nat_gateway.Nat",
            "module.routing-and-networking.aws_route_table.route_table"
          ]
        },
        {
          "index_key": "public_route",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0902ed3ad14ac8ec3",
            "id": "r-rtb-0d3e5ca8f755a1c511080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d3e5ca8f755a1c51",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_eip.elastic_ip",
            "module.routing-and-networking.aws_internet_gateway.igw_3",
            "module.routing-and-networking.aws_nat_gateway.Nat",
            "module.routing-and-networking.aws_route_table.route_table",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "table1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-0d3e5ca8f755a1c51",
            "id": "rtb-0d3e5ca8f755a1c51",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0902ed3ad14ac8ec3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pub_route_table"
            },
            "tags_all": {
              "Name": "pub_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "table2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-09077156c86956e61",
            "id": "rtb-09077156c86956e61",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0f1af369c4a2761e0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "priv_route_table"
            },
            "tags_all": {
              "Name": "priv_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "privateSubnet_association1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-093fb99cc99737591",
            "route_table_id": "rtb-09077156c86956e61",
            "subnet_id": "subnet-0db7210fc766d4ed3"
          },
          "dependencies": [
            "module.routing-and-networking.aws_route_table.route_table",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "privateSubnet_association2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b9e3f714f85c76e",
            "route_table_id": "rtb-09077156c86956e61",
            "subnet_id": "subnet-0fb82896c0495d4cb"
          },
          "dependencies": [
            "module.routing-and-networking.aws_route_table.route_table",
            "module.routing-and-networking.aws_subnet.subnets_private",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "publicSubnet_association1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fee7c418f41de9e8",
            "route_table_id": "rtb-0d3e5ca8f755a1c51",
            "subnet_id": "subnet-0db306e831d6201a3"
          },
          "dependencies": [
            "module.routing-and-networking.aws_route_table.route_table",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "publicSubnet_association2",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0022fb8ea51800668",
            "route_table_id": "rtb-0d3e5ca8f755a1c51",
            "subnet_id": "subnet-0815037447ff5610d"
          },
          "dependencies": [
            "module.routing-and-networking.aws_route_table.route_table",
            "module.routing-and-networking.aws_subnet.subnets_public",
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet2",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0db7210fc766d4ed3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db7210fc766d4ed3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet2"
            },
            "tags_all": {
              "Name": "subnet2"
            },
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "subnet4",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0fb82896c0495d4cb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0fb82896c0495d4cb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet4"
            },
            "tags_all": {
              "Name": "subnet4"
            },
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "subnet1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0db306e831d6201a3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db306e831d6201a3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet1"
            },
            "tags_all": {
              "Name": "subnet1"
            },
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        },
        {
          "index_key": "subnet3",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0815037447ff5610d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0815037447ff5610d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet3"
            },
            "tags_all": {
              "Name": "subnet3"
            },
            "vpc_id": "vpc-0624438186a9dbe56"
          },
          "dependencies": [
            "module.routing-and-networking.aws_vpc.vpc1"
          ]
        }
      ]
    },
    {
      "module": "module.routing-and-networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:vpc/vpc-0624438186a9dbe56",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-074ddc22e6b262d6d",
            "default_route_table_id": "rtb-0c741528ccda2cf6f",
            "default_security_group_id": "sg-0a3095ed8329cac98",
            "dhcp_options_id": "dopt-0c9045477746072cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0624438186a9dbe56",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c741528ccda2cf6f",
            "owner_id": "724690408369",
            "tags": {
              "Name": " lab3"
            },
            "tags_all": {
              "Name": " lab3"
            }
          }
        }
      ]
    }
  ]
}